# Aurora

./: .gitignore  Dockerfile  README.md  deploy_db.sh  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run copy.sh  run.bat  run.sh  views.py
.github/workflows/: docker-image.yml
Aurora/Assets/css/: style copy.css  style.css  style2.css
Aurora/Assets/html/: aurora.html  file_viewer.html  index.html  login copy.html  login.html  media_browser.html  post copy.html  post.html  profile.html  profileEdit.html  save.html
Aurora/Assets/js/: script copy.js  script.js
Aurora/Data/media/: post_10_0.txt  post_4_0.txt
Django/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
Kubernetes/: aurora-deployment.yaml  cleanup.bat  deploy.bat  kind-config.yaml
Kubernetes/Security/: README.md  deploy-security.bat
Kubernetes/Security/elk/: elasticsearch.yaml  elk-namespace.yaml  kibana.yaml
Kubernetes/Security/monitoring/: elasticsearch-secret.yaml  filebeat-config.yaml  (+3 more)
Maria/: deploy_db.sql  my.cnf
app/: app.py
app/templates/: index.html
apps/accounts/: forms.py  models.py  settings.py  urls.py  views.py
apps/core/: apps.py
apps/posts/: apps.py  feed.py  forms.py  models.py  urls.py  views.py
aurora/: asgi.py  settings.py  urls.py  wsgi.py
nginx-modsecurity/: README.md  modsecurity.conf  nginx.conf  reload_nginx.bat
templates/: base.html  script.js  style.css
templates/jinyeong_test/: base.html  script.js  style copy.css  style.css
templates/login_temp/: login.html
templates/posts/: post_list.html
(+2 files in other folders)
